--- a/source/css/components/ui/checkout.styl
+++ b/source/css/components/ui/checkout.styl
@@ -1,2 +1,18 @@
 .checkout-form.step-two
     display: none
+
+.field
+    &.flex
+        display: flex
+        > *:not(:first-child)
+            margin-left: 15px
+
+
+.checkout-message
+    border-color: #ffeeba
+    background: #fff3cd
+    color: #856404
+    border-radius: 3px
+    padding: 10px
+    display none
+    margin-top: 30px
